<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/slate"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">


    <Button
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:background="@color/denim"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height" tools:layout_editor_absoluteY="@dimen/button_absoluteY"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/button_margin" android:layout_marginStart="@dimen/button_margin"/>
    <EditText
            android:layout_width="@dimen/email_pass_width"
            android:text="@string/screen_login_email"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="@dimen/EditText_height"
            android:inputType="textEmailAddress"
            android:ems="10"
            tools:layout_editor_absoluteX="113dp" android:id="@+id/editText"
            app:layout_constraintBottom_toTopOf="@id/editText2"/>
    <EditText
            android:layout_width="@dimen/email_pass_width"
            android:text="@string/screen_login_pass"
            android:textColor="@color/white"
            android:layout_height="@dimen/EditText_height"
            android:textAlignment="center"
            android:inputType="numberPassword"
            android:ems="10"
            tools:layout_editor_absoluteY="407dp" tools:layout_editor_absoluteX="113dp" android:id="@+id/editText2"/>
    <TextView
            android:text="@string/screen_Forgot"
            android:textColor="@color/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="537dp"
            tools:layout_editor_absoluteX="138dp" android:id="@+id/textView"/>
    <TextView
            android:text="@string/screen_signin"
            android:textColor="@color/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="680dp"
            tools:layout_editor_absoluteX="105dp" android:id="@+id/textView2"/>
    <TextView
            android:text="@string/button_signin"
            android:textColor="@color/lavender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="680dp"
            tools:layout_editor_absoluteX="251dp" android:id="@+id/textView3"/>
    <ImageView
            android:layout_width="@dimen/Lock_Letter_width"
            android:layout_height="@dimen/Lock_Letter_height" app:srcCompat="@mipmap/ic_launcher_lock"
            tools:layout_editor_absoluteY="407dp" tools:layout_editor_absoluteX="64dp" android:id="@+id/imageView"/>
    <ImageView
            android:layout_width="@dimen/Lock_Letter_width"
            android:layout_height="@dimen/Lock_Letter_height" app:srcCompat="@mipmap/ic_launcher_letter"
            tools:layout_editor_absoluteY="360dp" tools:layout_editor_absoluteX="64dp" android:id="@+id/imageView2"/>
    <ImageView
            android:layout_width="@dimen/Kombini_width"
            android:layout_height="351dp" app:srcCompat="@mipmap/ic_launcher_komlini"
            android:id="@+id/imageView3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical" app:layout_constraintStart_toStartOf="parent"
                                          app:layout_constraintHorizontal_bias="0.5"
                                          app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>